// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address renders correctly 1`] = `
<blaze-address
  class="hydrated"
>
  Address line one
  <address
    class="c-text c-address"
  />
</blaze-address>
`;

exports[`Address renders the address heading 1`] = `
<blaze-address
  class="hydrated"
>
  
        
  <blaze-address-heading
    class="hydrated"
  >
    Address header
    <span
      class="c-address__heading"
    />
  </blaze-address-heading>
  
        Address line one
  <br />
  
        Address line two
  <br />
  
        Postcode
      
  <address
    class="c-text c-address"
  />
</blaze-address>
`;
